BSC-59: Created a styling hook; more will be created, so styles can easily be reused throughout the components. Got toggle dark mode and read only mode working correctly.

--- a/src/components/form/checkboxes/checkbox/checkbox.css
+++ b/src/components/form/checkboxes/checkbox/checkbox.css
@@ -1,43 +1,54 @@
-.bsc-checkbox-border {
+/****************************
+ * Not Dark
+ **/
+:not(.bsc-dark) .bsc-checkbox {
   box-shadow: inset 0 0 0 1px var(--theme-bsc-gray-2);
 }
 
-.bsc-checkbox-border-read-only {
-  box-shadow: inset 0 0 0 1px var(--theme-bsc-gray-4);
-}
-
-.bsc-checkbox-border-dark {
-  box-shadow: inset 0 0 0 1px var(--theme-bsc-mono-light-1);
-}
-
-.bsc-checkbox-border-dark-read-only {
-  box-shadow: inset 0 0 0 1px var(--theme-bsc-mono-light-3);
-}
-
 /* The hover style should only be applied if the checkbox is not checked */
-.bsc-checkbox-border-hover:not(:checked):hover {
+:not(.bsc-dark) .bsc-checkbox:not(:checked):hover {
   box-shadow: inset 0 0 0 2px var(--theme-bsc-gray-4);
 }
 
-.bsc-checkbox-border-hover-dark:not(:checked):hover {
-  box-shadow: inset 0 0 0 2px var(--theme-bsc-mono-light-1);
-}
-
-.bsc-checkbox-border-checked:checked {
+:not(.bsc-dark) .bsc-checkbox:checked {
   box-shadow: inset 0 0 0 11px var(--theme-bsc-primary-1);
 }
 
-.bsc-checkbox-border-checked-read-only:checked {
+:not(.bsc-dark) .bsc-checkbox-read-only {
+  box-shadow: inset 0 0 0 1px var(--theme-bsc-gray-4);
+}
+
+:not(.bsc-dark) .bsc-checkbox-read-only:checked {
   box-shadow: inset 0 0 0 11px var(--theme-bsc-primary-4);
 }
 
-.bsc-checkbox-border-checked-dark:checked {
-  box-shadow: inset 0 0 0 11px var(--theme-bsc-mono-light-1);
+/****************************
+ * Is Dark
+ **/
+
+:is(.bsc-dark) .bsc-checkbox {
+  box-shadow: inset 0 0 0 1px var(--theme-bsc-mono-light-2);
 }
 
-.bsc-checkbox-border-checked-dark-read-only:checked {
+:is(.bsc-dark) .bsc-checkbox:checked {
+  box-shadow: inset 0 0 0 11px var(--theme-bsc-mono-light-2);
+}
+
+:is(.bsc-dark) .bsc-checkbox:not(:checked):hover {
+  box-shadow: inset 0 0 0 2px var(--theme-bsc-mono-light-2);
+}
+
+:is(.bsc-dark) .bsc-checkbox-read-only {
+  box-shadow: inset 0 0 0 1px var(--theme-bsc-mono-light-3);
+}
+
+:is(.bsc-dark) .bsc-checkbox-read-only:checked {
   box-shadow: inset 0 0 0 11px var(--theme-bsc-mono-light-3);
 }
+
+/****************************
+ * Animation Settings
+ **/
 
 .bsc-checkbox-animate input:checked + svg {
   @apply bsc-animate-bounce
